@@ -105,6 +105,7 @@ test.ext,v text/plain ox
 test.fl application/x-fluid
 helloworld.java text/x-java ox
 test.cs text/x-csharp ox
+test.dot text/vnd.graphviz x
 test.vala text/x-vala ox
 test.mof text/x-mof ox
 # Copied from http://bugs.freedesktop.org/show_bug.cgi?id=11530
